[project]
name = "python-llm-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langfuse>=2.60.5",
    "litellm>=1.68.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 120

lint.select = ["E", "F", "I", "W", "B006", "PTH", "ANN"]
lint.ignore = ["E203", "W293", "E501", "ANN204", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["ANN"]
"conftest.py" = ["ANN"]

[tool.pyright]
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportMissingModuleSource = false
